{
  "version": 4,
  "terraform_version": "0.14.4",
  "serial": 55,
  "lineage": "d514c0a2-a309-631a-241f-5115a4ff07c6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "main_vpc_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:622383701450:route-table/rtb-0b415ac5503ee883f",
            "default_route_table_id": "rtb-0b415ac5503ee883f",
            "id": "rtb-0b415ac5503ee883f",
            "owner_id": "622383701450",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0413c46eb7e010136",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Metrics playground",
              "User": "Ryan"
            },
            "tags_all": {
              "Environment": "Metrics playground",
              "User": "Ryan"
            },
            "timeouts": null,
            "vpc_id": "vpc-0748a908ac6c68408"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main_vpc_internet_gateway",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "first_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-083602cee93914c0c",
            "arn": "arn:aws:ec2:us-east-1:622383701450:instance/i-0488cfa0e0d8ab73d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0488cfa0e0d8ab73d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ryan-metrics-playground-keypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0abc674e3f9cd72b6",
            "private_dns": "ip-10-0-0-94.ec2.internal",
            "private_ip": "10.0.0.94",
            "public_ip": "3.236.57.148",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0aa46bce099236aaf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0237f95e2afee6fc0",
            "tags": {
              "Environment": "Metrics playground",
              "User": "Ryan"
            },
            "tags_all": {
              "Environment": "Metrics playground",
              "User": "Ryan"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-058a835a42533fe6d"
            ]
          },
          "dependencies": [
            "aws_security_group.main_vpc_security_group",
            "aws_subnet.main_subnet",
            "aws_vpc.main_vpc",
            "data.aws_ami.amazon-linux-ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_vpc_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:622383701450:internet-gateway/igw-0413c46eb7e010136",
            "id": "igw-0413c46eb7e010136",
            "owner_id": "622383701450",
            "tags": {
              "Environment": "Metrics playground",
              "User": "Ryan"
            },
            "tags_all": {
              "Environment": "Metrics playground",
              "User": "Ryan"
            },
            "vpc_id": "vpc-0748a908ac6c68408"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main_vpc_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:622383701450:security-group/sg-058a835a42533fe6d",
            "description": "Main security group for test metrics playground",
            "egress": [],
            "id": "sg-058a835a42533fe6d",
            "ingress": [
              {
                "cidr_blocks": [
                  "70.123.226.90/32"
                ],
                "description": "ICMP from home",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "70.123.226.90/32"
                ],
                "description": "SSH from home",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20220113220058799500000001",
            "name_prefix": "terraform-",
            "owner_id": "622383701450",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Metrics playground",
              "User": "Ryan"
            },
            "tags_all": {
              "Environment": "Metrics playground",
              "User": "Ryan"
            },
            "timeouts": null,
            "vpc_id": "vpc-0748a908ac6c68408"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "main_sg_icmp_from_home",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "70.123.226.90/32"
            ],
            "description": "ICMP from home",
            "from_port": -1,
            "id": "sgrule-1564972677",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "icmp",
            "security_group_id": "sg-058a835a42533fe6d",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.main_vpc_security_group",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "main_sg_ssh_from_home",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "70.123.226.90/32"
            ],
            "description": "SSH from home",
            "from_port": 22,
            "id": "sgrule-3688317926",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-058a835a42533fe6d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.main_vpc_security_group",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:622383701450:subnet/subnet-0237f95e2afee6fc0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0237f95e2afee6fc0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "622383701450",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Metrics playground",
              "User": "Ryan"
            },
            "tags_all": {
              "Environment": "Metrics playground",
              "User": "Ryan"
            },
            "vpc_id": "vpc-0748a908ac6c68408"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:622383701450:vpc/vpc-0748a908ac6c68408",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-026d0d48f2379ca11",
            "default_route_table_id": "rtb-0b415ac5503ee883f",
            "default_security_group_id": "sg-0e8af59413f51c02d",
            "dhcp_options_id": "dopt-e18ce79b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0748a908ac6c68408",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b415ac5503ee883f",
            "owner_id": "622383701450",
            "tags": {
              "Environment": "Metrics playground",
              "User": "Ryan"
            },
            "tags_all": {
              "Environment": "Metrics playground",
              "User": "Ryan"
            }
          }
        }
      ]
    }
  ]
}